chore(test): upgrade JUnit test cases
Signed-off-by: Gaurav Mishra <mishra.gaurav@siemens.com>